Upgrade to Java 25